--- a/PlatedRestaurant/PlatedRestaurant/Base.lproj/Main.storyboard
+++ b/PlatedRestaurant/PlatedRestaurant/Base.lproj/Main.storyboard
@@ -13,7 +13,6 @@
         <!--HomeViewController-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="HomeViewController" title="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="PlatedRestaurant" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -74,6 +73,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="zgt-Si-m91"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="581.60000000000002" y="55.322338830584712"/>
         </scene>
@@ -92,7 +92,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="279.5"/>
                                         <color key="backgroundColor" red="0.71458727899999996" green="0.28496425749999998" blue="0.27606907190000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                        <state key="normal" title="PLATED">
+                                        <state key="normal">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -103,7 +103,7 @@
                                         <rect key="frame" x="0.0" y="279.5" width="375" height="279.5"/>
                                         <color key="backgroundColor" red="0.13249390059999999" green="0.57230681179999998" blue="0.57230681179999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                        <state key="normal" title="PLATED">
+                                        <state key="normal">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -112,17 +112,23 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="GnL-V8-OO4">
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="KVQ-kn-wU0" firstAttribute="trailing" secondItem="pQ1-F1-M30" secondAttribute="trailing" id="1h0-Q4-sfl"/>
                             <constraint firstItem="KVQ-kn-wU0" firstAttribute="bottom" secondItem="pQ1-F1-M30" secondAttribute="bottom" id="NMj-f2-jai"/>
                             <constraint firstItem="pQ1-F1-M30" firstAttribute="leading" secondItem="KVQ-kn-wU0" secondAttribute="leading" id="PZd-YG-GPc"/>
+                            <constraint firstItem="GnL-V8-OO4" firstAttribute="centerY" secondItem="Lu5-60-9jR" secondAttribute="centerY" id="aXr-c5-VdX"/>
+                            <constraint firstItem="GnL-V8-OO4" firstAttribute="centerX" secondItem="KVQ-kn-wU0" secondAttribute="centerX" id="cno-AS-Lys"/>
                             <constraint firstItem="pQ1-F1-M30" firstAttribute="top" secondItem="KVQ-kn-wU0" secondAttribute="top" id="t84-Va-t98"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KVQ-kn-wU0"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="GnL-V8-OO4" id="lSW-ic-bNa"/>
                         <outlet property="bottomButton" destination="ufF-0v-twx" id="UVi-hf-JY1"/>
                         <outlet property="topButton" destination="fPj-Cs-L69" id="jh4-9G-gUI"/>
                         <segue destination="2Pu-nk-ybp" kind="show" identifier="segueToRecipesOnMenu" id="i5c-BB-cix"/>
